# sdk_python_xysq

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/: pull_request_template.md
community/: README.md
examples/: 01_basic_memory.py  02_chatbot_with_memory.py  02_litellm_agent.py  03_claude_agent.py  03_team_memory.py  04_knowledge_base.py  04_xysq_agent.py  05_agent_with_tools.py  06_xysq_agent.py  README.md
xysq/: __init__.py  _client.py  _config.py  _http.py  _log.py  _sync_client.py  _team.py  agent.py  client.py  exceptions.py  knowledge.py  memory.py  models.py  types.py
xysq/integrations/: __init__.py  _base.py  anthropic.py  litellm.py
