[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xysq"
version = "1.0.0"
description = "Python SDK for the xysq consent-first memory API"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = ["httpx>=0.27", "pydantic>=2.0", "python-dotenv>=1.0"]

[project.optional-dependencies]
agent = ["litellm>=1.40"]
claude = ["anthropic>=0.30"]
all = ["litellm>=1.40", "anthropic>=0.30"]

[tool.hatch.build.targets.wheel]
packages = ["xysq"]
